--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: "python-3.9:slim
+    container: python:3.9-slim
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Install dependencies
