--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -3,7 +3,6 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: cleanup
-
 spec:
   description: This task will clean up a workspace by deleting all the files.
   workspaces:
@@ -13,8 +12,8 @@ spec:
       image: alpine:3
       env:
         - name: WORKSPACE_SOURCE_PATH
-          value: "$(workspace.source.path)"
-      WorkingDir: "$(workspace.source.path)"
+          value: "$(workspaces.source.path)"
+      WorkingDir: "$(workspaces.source.path)"
       securityContext:
         runAsNonRoot: false
         runAsUser: 0
