--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -50,7 +50,7 @@ spec:
   steps:
     - name: nosetests
       image: python:3.9-slim
-      workingDir: "$(workspace.source.path)"
+      workingDir: "$(workspaces.source.path)"
       script: |
           #!/bin/bash
           set -e
